[project]
name = "beta"
version = "0.1.0"
description = "CLI agent for climbing data queries and visualizations"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.0",
    "anthropic>=0.40",
    "google-auth>=2.0",
    "gspread>=6.0",
    "prompt-toolkit>=3.0.52",
    "rich>=13.0",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "vl-convert-python>=1.0",
]

[project.scripts]
beta = "beta.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beta"]
